--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,4 +81,4 @@ if(USE_GL_VBO_EMULATION)
     add_compile_options(-DUSE_GL_VBO_EMULATION)
 endif()
 
-target_compile_options(stb_vorbis PUBLIC -w)
+target_compile_options(stb_vorbis PRIVATE -w)
