more cmake nits

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,10 +76,11 @@ else()
     file(CREATE_LINK "${CMAKE_CURRENT_SOURCE_DIR}/game/assets" "${CMAKE_CURRENT_BINARY_DIR}/assets" SYMBOLIC)
 endif()
 
-#VBO Emulation
+# VBO Emulation
 if(USE_GL_VBO_EMULATION)
-    add_compile_options(-DUSE_GL_VBO_EMULATION)
+    add_compile_definitions(USE_GL_VBO_EMULATION)
 endif()
 
+# Disable warnings on third party libraries
 target_compile_options(stb_vorbis PRIVATE -w)
 target_compile_options(stb_image PRIVATE -w)
