--- a/platforms/sdl/sdl2/CMakeLists.txt
+++ b/platforms/sdl/sdl2/CMakeLists.txt
@@ -36,7 +36,7 @@ add_library(SDL INTERFACE)
 if(ANDROID OR MCPE_WIN32)
     # Use Vendored SDL2 (Only For Android)
     add_subdirectory(../../../thirdparty/SDL2/src SDL EXCLUDE_FROM_ALL)
-    set_target_properties(SDL2::SDL2 PROPERTIES CXX_STANDARD 11)
+    set_target_properties(SDL2 PROPERTIES CXX_STANDARD 11)
     target_link_libraries(SDL INTERFACE SDL2::SDL2)
 elseif(EMSCRIPTEN)
     # Use Emscripten's SDL2
