--- a/platforms/windows/projects/Renderer/Renderer.vcxproj
+++ b/platforms/windows/projects/Renderer/Renderer.vcxproj
@@ -78,8 +78,6 @@
     <ClCompile Include="$(MC_ROOT)\source\renderer\MatrixStack.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\renderer\Mesh.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\renderer\PerFrameConstants.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\platform\ogl\Extensions.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\platform\ogl\ShaderPrecision.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\renderer\QuadIndexBuffer.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\renderer\RenderChunkConstants.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\renderer\RenderContextImmediate.cpp" />
@@ -102,70 +100,8 @@
     <ClCompile Include="$(MC_ROOT)\source\renderer\hal\enums\ShaderStagesBits_JsonParser.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\renderer\hal\enums\StencilOp_JsonParser.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\renderer\hal\enums\TextureFiltering_JsonParser.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\enums\VertexField.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\renderer\hal\enums\VertexField_JsonParser.cpp" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(MC_GFX_API)'=='Null'">
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\BlendStateNull.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\BufferNull.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\ConstantBufferContainerNull.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\DepthStencilStateNull.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\ImmediateBufferNull.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\RasterizerStateNull.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\RenderContextNull.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\RenderDeviceNull.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\ShaderConstantNull.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\ShaderConstantWithDataNull.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\ShaderNull.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\ShaderProgramNull.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\null\TextureNull.cpp" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(MC_GFX_API)'=='OGL'">
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\API_OGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\BlendStateOGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\BufferOGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\ConstantBufferContainerOGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\DepthStencilStateOGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\FixedPipelineStateOGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\FogStateOGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\GPUEventsOGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\helpers\ErrorHandlerOGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\ImmediateBufferOGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\ProfileSectionOGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\RasterizerStateOGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\RenderContextOGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\RenderDeviceOGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\ResourceOGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\ShaderConstantOGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\ShaderConstantWithDataOGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\ShaderOGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\ShaderProgramOGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\ShaderResourceOGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\ShaderUniformOGL.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\ogl\TextureOGL.cpp" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(MC_GFX_API)'=='D3D11'">
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\dxgi\API_DXGI.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\dxgi\helpers\ErrorHandlerDXGI.cpp" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(MC_GFX_API)'=='D3D11'">
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d11\API_D3D11.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d11\BlendStateD3D11.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d11\BufferD3D11.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d11\ConstantBufferContainerD3D11.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d11\DepthStencilStateD3D11.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d11\GPUEventsD3D11.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d11\ImmediateBufferD3D11.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d11\ProfileSectionD3D11.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d11\RasterizerStateD3D11.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d11\RenderContextD3D11.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d11\RenderDeviceD3D11.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d11\ShaderConstantD3D11.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d11\ShaderConstantWithDataD3D11.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d11\ShaderD3D11.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d11\ShaderProgramD3D11.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d11\ShaderResourceD3D11.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d11\ShaderUniformD3D11.cpp" />
-    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d11\TextureD3D11.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\renderer\GL\GL.hpp" />
@@ -249,8 +185,6 @@
     <ClInclude Include="$(MC_ROOT)\source\renderer\Mesh.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\renderer\PerFrameConstants.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\renderer\PlatformDefinitions.h" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\platform\ogl\Extensions.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\platform\ogl\ShaderPrecision.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\renderer\QuadIndexBuffer.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\renderer\RenderChunkConstants.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\renderer\RenderContextImmediate.hpp" />
@@ -265,69 +199,22 @@
     <ClInclude Include="$(MC_ROOT)\source\renderer\VertexFormat.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\renderer\WeatherConstants.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\renderer\WorldConstants.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\enums\MapType.hpp" />
   </ItemGroup>
   <ItemGroup Condition="'$(MC_GFX_API)'=='Null'">
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\BlendStateNull.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\BufferNull.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\ConstantBufferContainerNull.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\DepthStencilStateNull.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\ImmediateBufferNull.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\RasterizerStateNull.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\RenderContextNull.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\RenderDeviceNull.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\ShaderConstantNull.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\ShaderConstantWithDataNull.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\ShaderNull.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\ShaderProgramNull.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\null\TextureNull.hpp" />
+    <ProjectReference Include="..\Renderer.Null\Renderer.Null.vcxproj">
+      <Project>{70c3540e-95cd-4a57-bdf2-e1da7767a918}</Project>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup Condition="'$(MC_GFX_API)'=='OGL'">
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\API_OGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\BlendStateOGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\BufferOGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\ConstantBufferContainerOGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\DepthStencilStateOGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\FixedPipelineStateOGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\FogStateOGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\GPUEventsOGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\helpers\ErrorHandlerOGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\ImmediateBufferOGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\ProfileSectionOGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\RasterizerStateOGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\RenderContextOGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\RenderDeviceOGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\ResourceOGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\ShaderConstantOGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\ShaderConstantWithDataOGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\ShaderOGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\ShaderProgramOGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\ShaderResourceOGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\ShaderUniformOGL.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\ogl\TextureOGL.hpp" />
+    <ProjectReference Include="..\Renderer.OGL\Renderer.OGL.vcxproj">
+      <Project>{aa0216ca-956e-4617-9a71-581b5eebf20c}</Project>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup Condition="'$(MC_GFX_API)'=='D3D11'">
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\dxgi\API_DXGI.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\dxgi\helpers\ErrorHandlerDXGI.hpp" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(MC_GFX_API)'=='D3D11'">
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d11\API_D3D11.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d11\BlendStateD3D11.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d11\BufferD3D11.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d11\ConstantBufferContainerD3D11.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d11\DepthStencilStateD3D11.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d11\GPUEventsD3D11.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d11\ImmediateBufferD3D11.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d11\ProfileSectionD3D11.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d11\RasterizerStateD3D11.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d11\RenderContextD3D11.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d11\RenderDeviceD3D11.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d11\ShaderConstantD3D11.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d11\ShaderConstantWithDataD3D11.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d11\ShaderD3D11.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d11\ShaderProgramD3D11.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d11\ShaderResourceD3D11.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d11\ShaderUniformD3D11.hpp" />
-    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d11\TextureD3D11.hpp" />
+    <ProjectReference Include="..\Renderer.D3D11\Renderer.D3D11.vcxproj">
+      <Project>{82e92e51-ad31-44ef-a133-ae0053256d5a}</Project>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
