--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,12 @@ set(CMAKE_CXX_STANDARD 11)
 else()
 set(CMAKE_CXX_STANDARD 98)
 endif()
+set(CXX_EXTENSIONS OFF)
+
+# Warnings
+if(WERROR)
+    add_compile_options(-Werror)
+endif()
 
 # WASM
 if(EMSCRIPTEN)
@@ -28,7 +34,10 @@ check_symbol_exists("_WIN32" "" MCPE_WIN32)
 
 # Clang
 if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
-    add_compile_options(-Wno-inconsistent-missing-override -Wno-enum-compare-switch -Wno-register)
+    add_compile_options(-Wno-inconsistent-missing-override)
+endif()
+if(APPLE)
+    add_compile_options(-Wno-deprecated-declarations)
 endif()
 
 # Windows Linking
@@ -53,7 +62,7 @@ else()
 endif()
 
 # Disable thread local storage (needed for C++98 & iOS)
-add_compile_options(-DRAPIDJSON_NO_THREAD_LOCAL -DSTBI_NO_THREAD_LOCALS)
+add_compile_definitions(RAPIDJSON_NO_THREAD_LOCAL STBI_NO_THREAD_LOCALS)
 
 # Android Logging
 if(ANDROID)
@@ -76,7 +85,11 @@ else()
     file(CREATE_LINK "${CMAKE_CURRENT_SOURCE_DIR}/game/assets" "${CMAKE_CURRENT_BINARY_DIR}/assets" SYMBOLIC)
 endif()
 
-#VBO Emulation
+# VBO Emulation
 if(USE_GL_VBO_EMULATION)
-    add_compile_options(-DUSE_GL_VBO_EMULATION)
+    add_compile_definitions(USE_GL_VBO_EMULATION)
 endif()
+
+# Disable warnings on third party libraries
+target_compile_options(stb_vorbis PRIVATE -w)
+target_compile_options(stb_image PRIVATE -w)
