--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,7 @@ project(reminecraftpe)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 
-if (WIN32 OR LINUX)
-set(CMAKE_CXX_STANDARD 11)
-else()
-set(CMAKE_CXX_STANDARD 98)
-endif()
+set(CMAKE_C_STANDARD 99)
 set(CXX_EXTENSIONS OFF)
 
 # Warnings
@@ -47,6 +43,10 @@ if(REMCPE_WIN32)
         -static-libgcc
         -static-libstdc++
     )
+    # Modern MinGW doesn't support C++98 and will error if you try to use it
+    set(CMAKE_CXX_STANDARD 11)
+else()
+    set(CMAKE_CXX_STANDARD 98)
 endif()
 
 # HaikuOS Network Library
