--- a/platforms/sdl/sdl2/CMakeLists.txt
+++ b/platforms/sdl/sdl2/CMakeLists.txt
@@ -33,7 +33,7 @@ target_link_libraries(reminecraftpe stb_image)
 
 # SDL
 add_library(SDL INTERFACE)
-if(ANDROID OR MCPE_WIN32)
+if(ANDROID OR REMCPE_WIN32)
     # Use Vendored SDL2 (Only For Android)
     add_subdirectory(../../../thirdparty/SDL2/src SDL EXCLUDE_FROM_ALL)
     set_target_properties(SDL2 PROPERTIES CXX_STANDARD 11)
@@ -53,20 +53,22 @@ if(TARGET SDL2::SDL2main)
     target_link_libraries(reminecraftpe SDL2::SDL2main)
 endif()
 
-# OpenGL
-if(ANDROID)
-    find_library(GLES_LIB GLESv1_CM REQUIRED)
-    target_link_libraries(reminecraftpe-core PUBLIC "${GLES_LIB}")
-    target_compile_definitions(reminecraftpe-core PUBLIC USE_GLES)
-else()
-    find_package(OpenGL REQUIRED)
-    target_link_libraries(reminecraftpe-core PUBLIC OpenGL::GL)
-    if(EMSCRIPTEN)
-        # Use WebGL 2
-        target_link_options(reminecraftpe-core PUBLIC
-            -sMIN_WEBGL_VERSION=2 -sMAX_WEBGL_VERSION=2
-            -sLEGACY_GL_EMULATION -sGL_FFP_ONLY
-        )
+if(REMCPE_GFX_API STREQUAL "OGL")
+    # OpenGL
+    if(ANDROID)
+        find_library(GLES_LIB GLESv1_CM REQUIRED)
+        target_link_libraries(reminecraftpe-core PUBLIC "${GLES_LIB}")
+        target_compile_definitions(reminecraftpe-core PUBLIC USE_GLES)
+    else()
+        find_package(OpenGL REQUIRED)
+        target_link_libraries(reminecraftpe-core PUBLIC OpenGL::GL)
+        if(EMSCRIPTEN)
+            # Use WebGL 2
+            target_link_options(reminecraftpe-core PUBLIC
+                -sMIN_WEBGL_VERSION=2 -sMAX_WEBGL_VERSION=2
+                -sLEGACY_GL_EMULATION -sGL_FFP_ONLY
+            )
+        endif()
     endif()
 endif()
 
