--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -449,13 +449,6 @@ add_library(reminecraftpe-core STATIC
 )
 target_include_directories(reminecraftpe-core PUBLIC . ..)
 
-if(NOT DEFINED REMCPE_GFX_API)
-	message(STATUS "No GFX API specified, defaulting to OGL...")
-	set(REMCPE_GFX_API "OGL" CACHE STRING "HAL GFX API")
-endif()
-
-message(STATUS "Selected GFX API: ${REMCPE_GFX_API}")
-
 # OGL Shader variant build hack
 if(REMCPE_GFX_API STREQUAL "OGL_SHADERS")
 	target_compile_definitions(reminecraftpe-core PUBLIC FEATURE_GFX_SHADERS)
@@ -544,7 +537,7 @@ target_link_libraries(reminecraftpe-core PUBLIC raknet)
 
 # zlib
 add_library(zlib-interface INTERFACE)
-if(MCPE_WIN32)
+if(REMCPE_WIN32)
     # Compile Vendored ZLib
     add_subdirectory(../thirdparty/zlib zlib)
     target_link_libraries(zlib-interface INTERFACE zlib)
